--- a/maquetaPrueba3.html
+++ b/maquetaPrueba3.html
@@ -145,17 +145,35 @@
 <main>
     <div class="container">
         <div class="row acerca-de g-0 align-items-center px-4 mb-3">
-            <div class="col-12 col-lg-4 text-center">
+            <div class="col-12 col-lg-4 text-center d-none d-lg-block">
                 <img src="./Imagenes/mariu_actual.jpg" class="fotoyo rounded-circle" alt="">
                 <p class="nombre visually-hidden">Mariugenia Rincon</p>
             </div>
 
             <div class="col-12 col-lg-8 info">
-                <h2 class="titulo text-center text-lg-start"> <small>Soy</small><b> Mariugenia Rincon</b></h2>
-                <p class="resumen">Siempre me ha atraído el desarrollo, el estudio y la enseñanza. Disfruto cada aspecto
+                <h2 class="titulo text-center text-lg-start"> <small>Soy</small><b> Mariugenia Rincon</b></h2>            
+                <p class="resumen" id="text-acercade">Siempre me ha atraído el desarrollo, el estudio y la enseñanza. Disfruto cada aspecto
                     y me encanta crear sitios o aplicaciones complejos de principio a fin.  Uno de mis 
                     intereses es desarrollar e implementar continuamente aplicaciones web cada vez mas 
                     impresionantes y faciles de usar</p>
+            </div>
+            <div>
+                <input id="edit-acercade" type="text" oninput="myFunction2(this.value)" style="display:none">
+            </div>
+
+            <div class="columna col-12 d-flex align-items-center justify-content-end" onclick="cambiar_parrafo()">
+                <a href="#" class="px-4 d-flex text-decoration-none">
+                    <div class="w-100">
+                        <span>
+                        <div class="icono2 float-right">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                            </svg>
+                        </div>
+                        </span>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
@@ -331,6 +349,7 @@
                             <div class="w-100">
                                 <span>
                                     <img src="./Imagenes/latinhire-squarelogo.png" alt="" width="100" height="50" class="d-block w-100">
+                                    <p></p>
                                 </span>
                             </div>
                         </a> 
@@ -688,7 +707,7 @@
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col">
                   <div class="card mx-5 my-5 border border-info border-3" style="width: 60%">
-                    <img src="./Imagenes/Pagina1j.jpg" class="card-img-top" alt="..." style="width: 100%; height: 90%">
+                    <img src="./Imagenes/Pagina1j.jpg" class="card-img-top" alt="..." style="width: 100%; max-height: 300px">
                     <div class="card-body textcard">
                       <h5 class="card-title"><b>Portfolio para Argentina Programa</b></h5>
                       <p class="card-text">Trabajo final presentado para la certificacion como Programador Full Stack</p>
@@ -698,7 +717,7 @@
                 </div>
                 <div class="col">
                   <div class="card mx-5 my-5 border border-info border-3" style="width: 60%">
-                    <img src="./Imagenes/pastel3.jpg" class="card-img-top" alt="...">
+                    <img src="./Imagenes/pastel3.jpg" class="card-img-top" alt="..." style="width: 100%; max-height: 250px">
                     <div class="card-body textcard">
                       <h5 class="card-title"><b>App BakingDreams</b></h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -714,5 +733,6 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/app.js"></script>
+
 </body>
 </html>
